--- a/src/components/App.css
+++ b/src/components/App.css
@@ -50,7 +50,7 @@ table {
 
 /* Header Container Styling */
 #header-container {
-	
+
 }
 
 /* Searchbar Container */
@@ -247,4 +247,49 @@ table {
 	height: calc(100% + 1rem);
 	border: 1px solid black;
 	border-radius: 0.5rem;
+}
+
+/* Popup Styling */
+#popup-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(100, 100, 100, 0.2);
+	z-index: 100;
+}
+
+.popup {
+	width: 40vw;
+	height: 40vh;
+	border: 1px solid black;
+	background-color: rgba(255, 255, 255, 1);
+}
+
+.popup header {
+	width: 100%;
+	border: 1px solid red;
+}
+
+.popup-content {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	border: 1px solid green;
+}
+
+/* Detail Styling */
+#detail {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	padding: 0.25rem;
+}
+
+.detail-name {
+	margin-right: 1rem;
 }
