--- a/src/components/App.css
+++ b/src/components/App.css
@@ -265,31 +265,34 @@ table {
 }
 
 .popup {
-	width: 40vw;
-	height: 40vh;
+	width: 50vw;
 	border: 1px solid black;
 	background-color: rgba(255, 255, 255, 1);
 }
 
 .popup header {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 	width: 100%;
-	border: 1px solid red;
 }
 
 .popup-content {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	border: 1px solid green;
 }
 
 /* Detail Styling */
 #detail {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 	padding: 0.25rem;
 }
 
 .detail-name {
+}
+
+.detail-value {
+	justify-self: end;
 	margin-right: 1rem;
 }
