--- a/src/components/App.css
+++ b/src/components/App.css
@@ -112,6 +112,11 @@ body {
 
 .searchbar-form input {
   width: 20rem;
+	padding: 0.25rem;
+	border: none;
+	border-radius: 0.5rem;
+	outline: none;
+	background-color: var(--bg3);
 }
 
 .dropdown-container {
