Refactored entire application to callTradier API instead of Polygon, massively reducded total API calls

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -292,6 +292,11 @@ body {
 	cursor: pointer;
 }
 
+#call-container.empty-option-container,
+#put-container.empty-option-container {
+	cursor: default;
+}
+
 #call-container span,
 #put-container span {
 	color: var(--primary1);
