--- a/src/components/App.css
+++ b/src/components/App.css
@@ -286,6 +286,7 @@ body {
 /* Put & Call Price Styling */
 #call-container,
 #put-container {
+	position: relative;
 	display: grid;
   grid-template-columns: repeat(4, 1fr);
   place-items: center;
@@ -300,6 +301,25 @@ body {
 #call-container span,
 #put-container span {
 	color: var(--primary1);
+}
+
+#call-container .empty-option-popup,
+#put-container .empty-option-popup {
+	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	padding: 0.25rem;
+	background-color: var(--secondary4);
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+#call-container:hover > .empty-option-popup,
+#put-container:hover > .empty-option-popup {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 /* Band Styling */
