--- a/src/components/App.css
+++ b/src/components/App.css
@@ -407,13 +407,15 @@ body {
 	color: var(--primary1);
 }
 
-.popup .popup-prices-header,
-.popup .popup-greeks-header {
+.popup-prices-header,
+.popup-greeks-header,
+.popup-chart-header {
 	margin-top: 0.5rem;
 }
 
 .popup .popup-prices-header span,
-.popup .popup-greeks-header span {
+.popup .popup-greeks-header span,
+.popup .popup-chart-header span {
 	font-size: 1rem;
 	color: var(--primary5);
 }
@@ -454,6 +456,19 @@ body {
 
 #popup-container .popup-greeks > :nth-child(1n){
 	padding-right: 1rem;
+}
+
+.popup-chart {
+	width: 100%;
+}
+
+.popup-chart-loading {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 12.5rem;
 }
 
 /* Detail Styling */
