--- a/src/components/App.css
+++ b/src/components/App.css
@@ -86,12 +86,11 @@ table {
 * {
   box-sizing: border-box;
 	color: var(--primary5);
-	/* outline: 1px solid #f00 !important; */
 }
 
 body {
 	position: relative;
-	min-width: 2000px;
+	min-width: 50rem;
 	background-color: var(--bg1);
 	overflow-x: hidden;
 }
@@ -107,30 +106,37 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
-	/* ABOVE 100 */
-  height: 5vh;
+  height: 7vh;
 }
 
-.searchbar-form {
-
+.searchbar {
+	position: relative;
 }
 
 .searchbar-form input {
   width: 20rem;
+	height: 2rem;
 	padding: 0.25rem;
+	margin-bottom: 0.3rem;
 	border: none;
 	border-radius: 0.5rem;
-	outline: none;
 	background-color: var(--bg3);
+}
+
+.searchbar-form input:focus {
+	border: 1px solid rgba(145, 25, 141, 1);
+	outline: 2px solid rgba(145, 25, 141, 0.5);
 }
 
 .dropdown-container {
   position: absolute;
   width: 20rem;
-  max-height: 10rem;
-  background-color: var(--bg5);
+  max-height: 20rem;
+	border-radius: 0.5rem;
+	border: 1px solid var(--lightOverlay3);
+  background-color: var(--bg3);
 	line-height: normal;
-  overflow: auto;
+  overflow: hidden;
 	z-index: 1000;
 }
 
@@ -150,7 +156,6 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
-	/* ABOVE 100 */
 }
 
 .expirybar {
@@ -177,7 +182,6 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
-	/* ABOVE 100 */
 }
 
 .overview {
@@ -222,9 +226,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   width: 100vw;
-	/* ABOVE 100 */
   height: 75vh;
-	min-width: 20rem;
 }
 
 .chain {
