--- a/src/components/App.css
+++ b/src/components/App.css
@@ -63,9 +63,13 @@ table {
 	--lightOverlay1: rgba(255, 255, 255, 0.05);
 	--lightOverlay2: rgba(255, 255, 255, 0.10);
 	--lightOverlay3: rgba(255, 255, 255, 0.15);
+	--lightOverlay4: rgba(255, 255, 255, 0.20);
+	--lightOverlay5: rgba(255, 255, 255, 0.25);
 	--darkOverlay1: rgba(0, 0, 0, 0.05);
 	--darkOverlay2: rgba(0, 0, 0, 0.10);
 	--darkOverlay3: rgba(0, 0, 0, 0.15);
+	--darkOverlay4: rgba(0, 0, 0, 0.20);
+	--darkOverlay5: rgba(0, 0, 0, 0.25);
 	--red: red;
 	--green: green;
 
@@ -116,10 +120,10 @@ body {
 .searchbar-form input {
   width: 20rem;
 	height: 2rem;
-	padding: 0.25rem;
+	padding: 0.25rem 0.5rem;
 	margin-bottom: 0.3rem;
 	border: none;
-	border-radius: 0.5rem;
+	border-radius: 1rem;
 	background-color: var(--bg3);
 }
 
@@ -131,10 +135,11 @@ body {
 .dropdown-container {
   position: absolute;
   width: 20rem;
-  max-height: 20rem;
+  max-height: 15rem;
 	border-radius: 0.5rem;
 	border: 1px solid var(--lightOverlay3);
   background-color: var(--bg3);
+	box-shadow: 0rem 0.25rem 1rem 0.5rem var(--darkOverlay5);
 	line-height: normal;
   overflow: hidden;
 	z-index: 1000;
@@ -147,6 +152,10 @@ body {
 .dropdown-item {
 	padding: 0.25rem;
 	cursor: pointer;
+}
+
+.dropdown-item:hover {
+	background-color: var(--bg5);
 }
 
 /* Expirybar Styling */
@@ -165,15 +174,26 @@ body {
 	flex-wrap: wrap;
   width: 90%;
 	max-width: 90vw;
+	padding: 0.15rem;
 	border-radius: 0.5rem;
 	background-color: var(--bg2);
-
 }
 
 .expiry {
-	padding: 0.25rem 0.5rem;
+	padding: 0.3rem 0.5rem;
+	margin: 0.15rem;
+	border-radius: 0.25rem;
 	cursor: pointer;
 }
+
+.expiry:hover {
+	background-color: var(--bg3);
+}
+
+.expiry.active {
+	color: var(--secondary3)
+}
+
 
 /* Expirybar Styling */
 #overview-container {
@@ -315,6 +335,11 @@ body {
 #call-container span,
 #put-container span {
 	color: var(--primary1);
+}
+
+#call-container:hover span,
+#put-container:hover span {
+	color: var(--primary4);
 }
 
 #call-container .empty-option-popup,
