--- a/src/components/App.css
+++ b/src/components/App.css
@@ -43,7 +43,7 @@ table {
 }
 
 /* Variable Styling */
-:root {
+/* :root { */
 	/* Colours */
 	/* --bg1: rgba(18, 18, 18, 1);
 	--bg2: rgba(30.75, 30.75, 30.75, 1);
@@ -74,7 +74,7 @@ table {
 	--green: green; */
 
 
-	--bg1: rgba(10, 10, 10, 1);
+	/* --bg1: rgba(10, 10, 10, 1);
 	--bg2: rgba(20, 20, 20, 1);
 	--bg3: rgba(30, 30, 30, 1);
 	--bg4: rgba(40, 40, 40, 1);
@@ -98,19 +98,34 @@ table {
 	--darkOverlay2: rgba(0, 0, 0, 0.10);
 	--darkOverlay3: rgba(0, 0, 0, 0.15);
 	--darkOverlay4: rgba(0, 0, 0, 0.25);
-	--darkOverlay5: rgba(0, 0, 0, 0.50);
+	--darkOverlay5: rgba(0, 0, 0, 0.50); */
 
 	/* Font Sizes */
-	--fs-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
+	/* --fs-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
 	--fs-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
 	--fs-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
 	--fs-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
 	--fs-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
 	--fs-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
 	--fs-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
+} */
+
+/* Fonts */
+/* @font-face {
+    font-family: 'Futura Headline';
+		src: local('FuturaHeadline'), url(../fonts/FuturaHeadline.woff) format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
 }
 
-
+@font-face {
+    font-family: 'Futura Script';
+		src: local('FuturaScript'), url(../fonts/FuturaScript.woff) format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+} */
 
 /* General Styling */
 * {
@@ -125,26 +140,83 @@ body {
 	overflow-x: hidden;
 }
 
-/* Header Container Styling */
+/* Header Container */
 #header-container {
+	display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 90vw;
+	margin-left: 5vw;
+	margin-right: 5vw;
+}
+
+/* Title Container Styling */
+#title {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	height: 4rem;
+	padding: 1rem;
+}
+
+#title h1 {
+	font-size: 2.5rem;
+}
+
+/* Settings Container */
+#settings-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	justify-self: end;
+	height: 4rem;
+}
+
+#settings-svg,
+#theme-svg {
+	height: 2rem;
+	width: 2rem;
+	cursor: pointer;
+}
+
+#settings-svg {
+	margin-left: 0.5rem;
 }
 
 /* Searchbar Container */
-#searchbar-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 7vh;
+#searchbar-outer-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	justify-self: start;
+  height: 4rem;
+}
+
+#searchbar-inner-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 
 .searchbar {
-	position: relative;
+
+}
+
+#searchbar-svg {
+	width: 2rem;
+	height: 2rem;
+	cursor: pointer;
+}
+
+.searchbar-form {
+	width: 100%;
 }
 
 .searchbar-form input {
-  width: 20rem;
+  width: 10rem;
 	height: 2rem;
 	padding: 0.25rem 0.75rem;
 	margin-bottom: 0.3rem;
@@ -162,7 +234,7 @@ body {
 
 .dropdown-container {
   position: absolute;
-  width: 20rem;
+	width: 10rem;
   max-height: 15rem;
 	border-radius: 0.5rem;
 	border: 1px solid var(--lightOverlay3);
@@ -170,7 +242,7 @@ body {
 	box-shadow: 0rem 0.25rem 1rem 0.5rem var(--darkOverlay5);
 	line-height: normal;
   overflow: hidden;
-	z-index: 1000;
+	z-index: 1100;
 }
 
 .dropdown-container:empty {
@@ -241,8 +313,6 @@ body {
 	height: 2rem;
 	padding-top: 0.5rem;
 	padding-bottom: 1rem;
-	cursor: pointer;
-	z-index: 1000;
 }
 
 .overview-dte {
@@ -259,7 +329,7 @@ body {
 	justify-content: center;
 }
 
-.overview-iv {
+.overview-expiry {
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
@@ -623,4 +693,20 @@ body {
 
 .error-message span {
 	text-align: center;
+}
+
+
+
+/* @media (max-device-width:480px) {
+
+} */
+
+@media (max-width:820px) {
+
+	/* Overview Styling */
+	.overview-dte,
+	.overview-expiry {
+		visibility: hidden;
+	}
+
 }
