--- a/src/components/App.css
+++ b/src/components/App.css
@@ -103,8 +103,8 @@ table {
 :root {
 	/* Font Styling */
 	--fs-xxs: clamp(0.51rem, -0.02vw + 0.52rem, 0.5rem);
-	--fs-xs: clamp(0.64rem, 0.05vw + 0.63rem, 0.67rem);
-	--fs-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
+	--fs-xs: clamp(0.64rem, 0.05vw + 0.7rem, 0.75rem);
+	--fs-sm: clamp(0.8rem, 0.17vw + 0.8rem, 0.95rem);
 	--fs-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
 	--fs-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
 	--fs-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
@@ -139,6 +139,8 @@ table {
 body {
 	position: relative;
 	background-color: var(--bg1);
+	font-size: var(--fs-base);
+	font-size: 1rem;
 	overflow-x: hidden;
 }
 
