--- a/src/components/App.css
+++ b/src/components/App.css
@@ -42,62 +42,71 @@ table {
 	border-spacing: 0;
 }
 
-/* Variable Styling */
-	/* Colours */
-	/* --bg1: rgba(18, 18, 18, 1);
-	--bg2: rgba(30.75, 30.75, 30.75, 1);
-	--bg3: rgba(43.5, 43.5, 43.5, 1);
-	--bg4: rgba(56.25, 56.25, 56.25, 1);
-	--bg5: rgba(69, 69, 69, 1);
-	--primary1: rgba(245, 245, 245, 1);
-	--primary2: rgba(230, 230, 230, 1);
-	--primary3: rgba(210, 210, 210, 1);
-	--primary4: rgba(160, 160, 160, 1);
-	--primary5: rgba(130, 130, 130, 1);
-	--secondary1: rgba(145, 25, 141, 1);
-	--secondary2: rgba(162, 57, 160, 1);
-	--secondary3: rgba(192, 84, 190, 1);
-	--secondary4: rgba(194, 112, 192, 1);
-	--secondary5: rgba(214, 169, 213, 1);
-	--lightOverlay1: rgba(255, 255, 255, 0.05);
-	--lightOverlay2: rgba(255, 255, 255, 0.10);
-	--lightOverlay3: rgba(255, 255, 255, 0.15);
-	--lightOverlay4: rgba(255, 255, 255, 0.20);
-	--lightOverlay5: rgba(255, 255, 255, 0.25);
-	--darkOverlay1: rgba(0, 0, 0, 0.05);
-	--darkOverlay2: rgba(0, 0, 0, 0.10);
-	--darkOverlay3: rgba(0, 0, 0, 0.15);
-	--darkOverlay4: rgba(0, 0, 0, 0.25);
-	--darkOverlay5: rgba(0, 0, 0, 0.50);
-	--red: red;
-	--green: green; */
-
-
-	/* --bg1: rgba(10, 10, 10, 1);
-	--bg2: rgba(20, 20, 20, 1);
-	--bg3: rgba(30, 30, 30, 1);
-	--bg4: rgba(40, 40, 40, 1);
-	--bg5: rgba(50, 50, 50, 1);
+/* Dark Theme */
+:root {
+	--bg1: rgba(0, 0, 0, 1);
+	--bg2: rgba(10, 10, 10, 1);
+	--bg3: rgba(20, 20, 20, 1);
+	--bg4: rgba(30, 30, 30, 1);
+	--bg5: rgba(40, 40, 40, 1);
 	--primary1: rgba(255, 255, 255, 1);
 	--primary2: rgba(245, 245, 245, 1);
 	--primary3: rgba(235, 235, 235, 1);
 	--primary4: rgba(225, 225, 225, 1);
 	--primary5: rgba(215, 215, 215, 1);
-	--secondary1: rgba(145, 25, 141, 1);
-	--secondary2: rgba(162, 57, 160, 1);
-	--secondary3: rgba(192, 84, 190, 1);
-	--secondary4: rgba(194, 112, 192, 1);
-	--secondary5: rgba(214, 169, 213, 1);
-	--lightOverlay1: rgba(255, 255, 255, 0.05);
-	--lightOverlay2: rgba(255, 255, 255, 0.10);
-	--lightOverlay3: rgba(255, 255, 255, 0.15);
-	--lightOverlay4: rgba(255, 255, 255, 0.25);
-	--lightOverlay5: rgba(255, 255, 255, 0.50);
-	--darkOverlay1: rgba(0, 0, 0, 0.05);
-	--darkOverlay2: rgba(0, 0, 0, 0.10);
-	--darkOverlay3: rgba(0, 0, 0, 0.15);
-	--darkOverlay4: rgba(0, 0, 0, 0.25);
-	--darkOverlay5: rgba(0, 0, 0, 0.50); */
+	--secondary1: rgba(0, 18, 64, 1);
+	--secondary2: rgba(0, 35, 127, 1);
+	--secondary3: rgba(0, 53, 191, 1);
+	--secondary4: rgba(0, 63, 229, 1);
+	--secondary5: rgba(0, 68, 255, 1);
+	--secondaryOpaque3: rgba(0, 53, 191, 0.5);
+	--primaryOverlay1: rgba(255, 255, 255, 0.05);
+	--primaryOverlay2: rgba(255, 255, 255, 0.10);
+	--primaryOverlay3: rgba(255, 255, 255, 0.15);
+	--primaryOverlay4: rgba(255, 255, 255, 0.25);
+	--primaryOverlay5: rgba(255, 255, 255, 0.50);
+	--secondaryOverlay1: rgba(0, 0, 0, 0.05);
+	--secondaryOverlay2: rgba(0, 0, 0, 0.10);
+	--secondaryOverlay3: rgba(0, 0, 0, 0.15);
+	--secondaryOverlay4: rgba(0, 0, 0, 0.25);
+	--secondaryOverlay5: rgba(0, 0, 0, 0.50);
+	--shadow1: rgba(0, 0, 0, 0.10);
+	--shadow2: rgba(0, 0, 0, 0.20);
+	--shadow3: rgba(0, 0, 0, 0.30);
+}
+
+/* Light Theme */
+:root {
+	--bg1: rgba(255, 255, 255, 1);
+	--bg2: rgba(245, 245, 245, 1);
+	--bg3: rgba(235, 235, 235, 1);
+	--bg4: rgba(225, 225, 225, 1);
+	--bg5: rgba(215, 215, 215, 1);
+	--primary1: rgba(0, 0, 0, 1);
+	--primary2: rgba(10, 10, 10, 1);
+	--primary3: rgba(20, 20, 20, 1);
+	--primary4: rgba(30, 30, 30, 1);
+	--primary5: rgba(40, 40, 40, 1);
+	--secondary1: rgba(0, 18, 64, 1);
+	--secondary2: rgba(0, 35, 127, 1);
+	--secondary3: rgba(0, 53, 191, 1);
+	--secondary4: rgba(0, 63, 229, 1);
+	--secondary5: rgba(0, 68, 255, 1);
+	--secondaryOpaque3: rgba(0, 53, 191, 0.5);
+	--primaryOverlay1: rgba(0, 0, 0, 0.05);
+	--primaryOverlay2: rgba(0, 0, 0, 0.10);
+	--primaryOverlay3: rgba(0, 0, 0, 0.15);
+	--primaryOverlay4: rgba(0, 0, 0, 0.25);
+	--primaryOverlay5: rgba(0, 0, 0, 0.50);
+	--secondaryOverlay1: rgba(255, 255, 255, 0.05);
+	--secondaryOverlay2: rgba(255, 255, 255, 0.10);
+	--secondaryOverlay3: rgba(255, 255, 255, 0.15);
+	--secondaryOverlay4: rgba(255, 255, 255, 0.25);
+	--secondaryOverlay5: rgba(255, 255, 255, 0.50);
+	--shadow1: rgba(0, 0, 0, 0.10);
+	--shadow2: rgba(0, 0, 0, 0.20);
+	--shadow3: rgba(0, 0, 0, 0.30);
+}
 
 /* Root Styling */
 :root {
@@ -115,19 +124,19 @@ table {
 
 /* Fonts */
 @font-face {
-    font-family: 'Futura Headline';
-		src: local('FuturaHeadline'), url(../fonts/FuturaHeadline.woff) format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Futura Headline';
+	src: local('FuturaHeadline'), url(../fonts/FuturaHeadline.woff) format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Futura Script';
-		src: local('FuturaScript'), url(../fonts/FuturaScript.woff) format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Futura Script';
+	src: local('FuturaScript'), url(../fonts/FuturaScript.woff) format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 /* General Styling */
@@ -231,13 +240,13 @@ body {
 	border: none;
 	border-radius: 1rem;
 	background-color: var(--bg3);
-	box-shadow: 0rem 0rem 0.5rem 0.5rem var(--darkOverlay4);
+	box-shadow: 0rem 0rem 0.5rem 0.5rem var(--secondaryOverlay4);
 	text-transform: uppercase;
 }
 
 .searchbar-form input:focus {
-	border: 1px solid rgba(145, 25, 141, 1);
-	outline: 2px solid rgba(145, 25, 141, 0.5);
+	border: 1px solid var(--secondary3);
+	outline: 2px solid var(--secondaryOpaque3);
 }
 
 .dropdown-container {
@@ -245,9 +254,9 @@ body {
 	width: 10rem;
   max-height: 15rem;
 	border-radius: 0.5rem;
-	border: 1px solid var(--lightOverlay3);
+	border: 1px solid var(--primaryOverlay3);
   background-color: var(--bg3);
-	box-shadow: 0rem 0.25rem 1rem 0.5rem var(--darkOverlay5);
+	box-shadow: 0rem 0.25rem 1rem 0.5rem var(--secondaryOverlay5);
 	line-height: normal;
   overflow: hidden;
 	z-index: 1100;
@@ -285,8 +294,8 @@ body {
 	max-width: 90vw;
 	padding: 0.15rem;
 	border-radius: 0.5rem;
-	background-color: var(--bg2);
-	box-shadow: 0rem 0rem 1rem 0.5rem var(--darkOverlay4);
+	background-color: var(--secondary2);
+	/* box-shadow: 0rem 0rem 1rem 0.5rem var(--secondaryOverlay4); */
 }
 
 .expiry {
@@ -297,11 +306,11 @@ body {
 }
 
 .expiry:hover {
-	background-color: var(--bg3);
+	background-color: var(--secondary5);
 }
 
 .expiry.active {
-	color: var(--secondary3)
+	color: var(--bg3)
 }
 
 
@@ -514,7 +523,7 @@ body {
 	width: 6.5vw;
 	height: calc(100% + 0.5rem);
 	border-radius: 0.5rem;
-	background-color: var(--lightOverlay1);
+	background-color: var(--primaryOverlay1);
 }
 
 /* Popup Styling */
@@ -528,7 +537,7 @@ body {
 	align-items: center;
 	width: 100vw;
 	height: 100vh;
-	background-color: var(--lightOverlay3);
+	background-color: var(--primaryOverlay3);
 	cursor: pointer;
 	z-index: 100;
 }
@@ -540,7 +549,7 @@ body {
 	padding-top: 0.5rem;
 	border-radius: 0.5rem;
 	background-color: var(--bg1);
-	box-shadow: 0rem 0rem 1rem 0.5rem var(--darkOverlay4);
+	box-shadow: 0rem 0rem 1rem 0.5rem var(--shadow2);
 	cursor: auto;
 }
 
@@ -622,6 +631,11 @@ body {
 	height: 12.5rem;
 }
 
+.option-popup-chart-loading svg {
+	height: 1.5rem;
+	width: 1.5rem;
+}
+
 /* Detail Styling */
 #detail {
 	position: relative;
@@ -679,7 +693,7 @@ body {
 	align-items: center;
 	width: 100vw;
 	height: 100vh;
-	background-color: var(--lightOverlay3);
+	background-color: var(--primaryOverlay3);
 	cursor: pointer;
 	z-index: 100;
 }
@@ -692,7 +706,7 @@ body {
 	padding-top: 0.5rem;
 	border-radius: 0.5rem;
 	background-color: var(--bg1);
-	box-shadow: 0rem 0rem 1rem 0.5rem var(--darkOverlay4);
+	box-shadow: 0rem 0rem 1rem 0.5rem var(--secondaryOverlay4);
 	cursor: auto;
 }
 
