--- a/src/components/App.css
+++ b/src/components/App.css
@@ -163,10 +163,9 @@ body {
 }
 
 /* Header Container */
-#header-container {
+#navbar {
 	display: grid;
   grid-template-columns: repeat(3, 1fr);
-	padding: 1rem 2rem;
   width: 100%;
 }
 
@@ -196,11 +195,6 @@ body {
 	cursor: pointer;
 }
 
-#settings-svg {
-	/* Replace margin styling with tailwind */
-	margin-left: 0.5rem;
-}
-
 /* Searchbar Container */
 #searchbar-outer-container {
 	display: flex;
@@ -223,31 +217,13 @@ body {
 
 .searchbar-form input {
 	/* Replace  */
-  width: 10rem;
-	height: 2rem;
-	padding: 0.25rem 0.75rem;
-	margin-bottom: 0.3rem;
-	border: none;
-	border-radius: 1rem;
 	background-color: var(--bg3);
-	box-shadow: 0rem 0rem 0.5rem 0.5rem var(--secondaryOverlay4);
 	text-transform: uppercase;
-}
-
-.searchbar-form input:focus {
-	border: 1px solid var(--secondary3);
-	outline: 2px solid var(--secondaryOpaque3);
 }
 
 .dropdown-container {
   position: absolute;
-	width: 10rem;
-  max-height: 15rem;
-	border-radius: 0.5rem;
-	border: 1px solid var(--primaryOverlay3);
   background-color: var(--bg3);
-	box-shadow: 0rem 0.25rem 1rem 0.5rem var(--secondaryOverlay5);
-	line-height: normal;
   overflow: hidden;
 	z-index: 1100;
 }
@@ -256,23 +232,13 @@ body {
   display: none;
 }
 
-.dropdown-item {
-	padding: 0.25rem;
-	padding-left: 0.6rem;
-	cursor: pointer;
-}
-
-.dropdown-item:hover {
-	background-color: var(--bg5);
-}
-
 /* Expirybar Styling */
 #expirybar-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
 }
 
 .expirybar {
@@ -280,23 +246,6 @@ body {
 	flex-direction: row;
 	justify-content: center;
 	flex-wrap: wrap;
-  width: 90%;
-	max-width: 90vw;
-	padding: 0.15rem;
-	border-radius: 0.5rem;
-	background-color: var(--secondary2);
-	/* box-shadow: 0rem 0rem 1rem 0.5rem var(--secondaryOverlay4); */
-}
-
-.expiry {
-	padding: 0.3rem 0.5rem;
-	margin: 0.15rem;
-	border-radius: 0.25rem;
-	cursor: pointer;
-}
-
-.expiry:hover {
-	background-color: var(--secondary5);
 }
 
 .expiry.active {
@@ -310,7 +259,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
 }
 
 .overview {
