--- a/src/components/App.css
+++ b/src/components/App.css
@@ -313,113 +313,31 @@ body {
 
 /* Popup Styling */
 #option-popup-container {
-	position: fixed;
-	top: 0;
-	left: 0;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	width: 100vw;
-	height: 100vh;
-	background-color: var(--primaryOverlay3);
-	cursor: pointer;
-	z-index: 100;
 }
 
-.option-popup {
+#option-popup {
 	position: relative;
 	width: 50vw;
-	padding: 1rem;
-	padding-top: 0.5rem;
-	border-radius: 0.5rem;
-	background-color: var(--bg1);
 	box-shadow: 0rem 0rem 1rem 0.5rem var(--shadow2);
-	cursor: auto;
 }
 
-.option-popup header {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	width: 100%;
-	margin-bottom: 0.5rem;
-	color: var(--primary1);
-}
-
-.option-popup header span {
-	font-size: 1.25rem;
-	color: var(--primary1);
-}
-
-.option-popup-prices-header,
-.option-popup-greeks-header,
-.option-popup-chart-header {
-	margin-top: 0.5rem;
-}
-
-.option-popup-prices-header span,
-.option-popup-greeks-header span,
-.option-popup-chart-header span {
-	font-size: 1rem;
-	color: var(--primary5);
-}
-
-.close-option-popup-button {
-	position: absolute;
-	top: 0.5rem;
-	right: 0.5rem;
-	width: 1rem;
-	height: 1rem;
-	fill: var(--primary1);
-	cursor: pointer;
-}
-
-.option-popup-prices {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-}
-
-#option-popup-container .option-popup-prices > :nth-child(2n){
-	padding-left: 1rem;
-	border-left: 0.5px solid grey;
-}
-
-#option-popup-container .option-popup-prices > :nth-child(1n){
-	padding-right: 1rem;
-}
-
+.option-popup-prices,
 .option-popup-greeks {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 }
 
-#option-popup-container .option-popup-greeks > :nth-child(2n){
+#option-popup-container .option-popup-prices > :nth-child(2n),
+#option-popup-container .option-popup-greeks > :nth-child(2n) {
 	padding-left: 1rem;
 	border-left: 0.5px solid grey;
 }
 
-#option-popup-container .option-popup-greeks > :nth-child(1n){
+#option-popup-container .option-popup-prices > :nth-child(1n),
+#option-popup-container .option-popup-greeks > :nth-child(1n) {
 	padding-right: 1rem;
 }
 
-.option-popup-chart {
-	width: 100%;
-}
-
-.option-popup-chart-loading {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	height: 12.5rem;
-}
-
-.option-popup-chart-loading svg {
-	height: 1.5rem;
-	width: 1.5rem;
-}
 
 /* Detail Styling */
 #detail {
