Added fonts and updated styling, added comments

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -47,72 +47,6 @@ table {
 	border-spacing: 0;
 }
 
-/* Dark Theme */
-:root {
-	--bg1: rgba(0, 0, 0, 1);
-	--bg2: rgba(10, 10, 10, 1);
-	--bg3: rgba(20, 20, 20, 1);
-	--bg4: rgba(30, 30, 30, 1);
-	--bg5: rgba(40, 40, 40, 1);
-	--primary1: rgba(255, 255, 255, 1);
-	--primary2: rgba(245, 245, 245, 1);
-	--primary3: rgba(235, 235, 235, 1);
-	--primary4: rgba(225, 225, 225, 1);
-	--primary5: rgba(215, 215, 215, 1);
-	--secondary1: rgba(0, 18, 64, 1);
-	--secondary2: rgba(0, 35, 127, 1);
-	--secondary3: rgba(0, 53, 191, 1);
-	--secondary4: rgba(0, 63, 229, 1);
-	--secondary5: rgba(0, 68, 255, 1);
-	--secondaryOpaque3: rgba(0, 53, 191, 0.5);
-	--primaryOverlay1: rgba(255, 255, 255, 0.05);
-	--primaryOverlay2: rgba(255, 255, 255, 0.10);
-	--primaryOverlay3: rgba(255, 255, 255, 0.15);
-	--primaryOverlay4: rgba(255, 255, 255, 0.25);
-	--primaryOverlay5: rgba(255, 255, 255, 0.50);
-	--secondaryOverlay1: rgba(0, 0, 0, 0.05);
-	--secondaryOverlay2: rgba(0, 0, 0, 0.10);
-	--secondaryOverlay3: rgba(0, 0, 0, 0.15);
-	--secondaryOverlay4: rgba(0, 0, 0, 0.25);
-	--secondaryOverlay5: rgba(0, 0, 0, 0.50);
-	--shadow1: rgba(0, 0, 0, 0.10);
-	--shadow2: rgba(0, 0, 0, 0.20);
-	--shadow3: rgba(0, 0, 0, 0.30);
-}
-
-/* Light Theme */
-:root {
-	--bg1: rgba(255, 255, 255, 1);
-	--bg2: rgba(245, 245, 245, 1);
-	--bg3: rgba(235, 235, 235, 1);
-	--bg4: rgba(225, 225, 225, 1);
-	--bg5: rgba(215, 215, 215, 1);
-	--primary1: rgba(0, 0, 0, 1);
-	--primary2: rgba(10, 10, 10, 1);
-	--primary3: rgba(20, 20, 20, 1);
-	--primary4: rgba(30, 30, 30, 1);
-	--primary5: rgba(40, 40, 40, 1);
-	--secondary1: rgba(0, 18, 64, 1);
-	--secondary2: rgba(0, 35, 127, 1);
-	--secondary3: rgba(0, 53, 191, 1);
-	--secondary4: rgba(0, 63, 229, 1);
-	--secondary5: rgba(0, 68, 255, 1);
-	--secondaryOpaque3: rgba(0, 53, 191, 0.5);
-	--primaryOverlay1: rgba(0, 0, 0, 0.05);
-	--primaryOverlay2: rgba(0, 0, 0, 0.10);
-	--primaryOverlay3: rgba(0, 0, 0, 0.15);
-	--primaryOverlay4: rgba(0, 0, 0, 0.25);
-	--primaryOverlay5: rgba(0, 0, 0, 0.50);
-	--secondaryOverlay1: rgba(255, 255, 255, 0.05);
-	--secondaryOverlay2: rgba(255, 255, 255, 0.10);
-	--secondaryOverlay3: rgba(255, 255, 255, 0.15);
-	--secondaryOverlay4: rgba(255, 255, 255, 0.25);
-	--secondaryOverlay5: rgba(255, 255, 255, 0.50);
-	--shadow1: rgba(0, 0, 0, 0.10);
-	--shadow2: rgba(0, 0, 0, 0.20);
-	--shadow3: rgba(0, 0, 0, 0.30);
-}
-
 /* Root Styling */
 :root {
 	/* Font Styling */
@@ -129,41 +63,62 @@ table {
 
 /* Tailwind Colours
 Background: stone-100
-Shadow: slate-600/25 */
-
+Shadow: slate-600/25
+AltColors: blue-900
+*/
 
 /* Fonts */
 @font-face {
-  font-family: 'Futura Headline';
-	src: local('FuturaHeadline'), url(../fonts/FuturaHeadline.woff) format('woff');
+  font-family: 'GT Ultra Fine';
+  src: url('../fonts/GTUltraFine-Ultra.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat Bold';
+  src: url('../fonts/Montserrat-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Futura Script';
-	src: local('FuturaScript'), url(../fonts/FuturaScript.woff) format('woff');
-  font-weight: normal;
+  font-family: 'Montserrat Light';
+  src: url('../fonts/Montserrat-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat Black';
+  src: url('../fonts/Montserrat-Black.woff') format('woff');
+  font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
 
 /* General Styling */
 * {
+	font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
 }
 
 body {
 	position: relative;
-	/* background-color: var(--bg1); */
-	font-size: var(--fs-base);
-	font-size: 1rem;
+	font-size: var(--fs-sm);
+	font-family: 'Montserrat', sans-serif;
 	overflow-x: hidden;
-}
-
-/* Root Element Styling */
-#root {
 }
 
 /* Header Container */
@@ -302,11 +257,6 @@ body {
   place-items: center;
 }
 
-.band-price {
-  display: grid;
-  place-items: center;
-}
-
 /* Strikes Border Styling */
 #strikes-border {
 	position: absolute;
@@ -321,7 +271,6 @@ body {
 	position: relative;
 	max-width: 80vw;
 	margin: 1rem;
-	box-shadow: 0rem 0rem 1rem 0.5rem var(--shadow2);
 	overflow-y: auto;
 }
 
